1.2.2
- Adjusted Legio Unchained again
- Fixed Adaptive Mode not applying to special bounties
- Inertialess drive system changed to charge-based
- Shiva Disruptor Beamer
	- Efficiency improved from 0.9 to 0.75
- Peppa
	- Doubled arc chance
	- Halved energy portion of arc damage
	

1.2.1
- Bugfixes
- Equinox
	- Added Energy Bolt Coherer
	- Changed most hybrid mounts to energy
	- Updated variants


1.2
- Added Landsknecht cruiser
- Fixed Adaptive Mode S-mod application
- Volkite weapons
	- Reduced max spread
	- Increased projectile velocity
	- Increased damage from 40 to 50
	- Reduced flux cost from 15 to 10
- Teltrite
	- Reduced flux cost from 100 to 50
- Ronka
	- Increased damage from 70 to 100
	- Increased flux cost from 70 to 80
	- Increased refire delay from 0.4 to 0.5
- Hel Plating
	- Reduced OP cost to EMR levels
	- Armor penalty reduced to 60%
	- Armor regen increased to 6%
- Vale
	- DP cost 30 -> 22


1.1.1
- Crash hotfix


1.1
- Added Hellspitter Cannon
- Added Monosabot (S and M variants)
- Added Omna Swarmer
- Added Legio Unchained bounty
- Added more Legio/Blackwatch portraits


1.0
- wow, 1.0, woooow
- 0.96a compatibility
- Reworked ship distribution among vanilla factions in accordance with new doctrines
- Adjusted some ship variants
- Removed Ingress for good
- Removed Defiance (you don't even remember what that is)
- Fixes and tweaks and shit
- Added Hel Retribution
- Skysplitter resprited
	- Lowered survivability
	- Added 2 medium missile mounts
- Other stuff I forgot


0.9.3
- Updated for Starsector 0.96a
- Removed Ingress

0.9
- Added secrets
- Added Legio Adaptive Mode
- Daemons
	- Renamed "Daemon Core" hullmod to "Daemonic Heart"
	- Removed innate damage bonus to cruisers and capitals
	- Enrage function now reduces range 
	- Reworked the effects of Daemonic Heart and Hel Carapace/Plating
	- Redid some of the paintjobs
	- Reduced all Daemon top speeds by 10-20
	- Increased Daemonic Heart low flux speed boost by 20