@@ -4,23 +4,18 @@
 	"spawnType":"BALLISTIC_AS_BEAM",
 	"collisionClass":"RAY",
 	"collisionClassByFighter":"RAY_FIGHTER",
-	#"onHitEffect":"org.niatahl.tahlan.weapons.PPAOnHitEffect",
-	#"spawnType":"BALLISTIC",
-	#"collisionClass":"PROJECTILE_FF",
-	#"collisionClassByFighter":"PROJECTILE_FIGHTER",
 	"length":60.0,
 	"hitGlowRadius":30,
-	"width":20.0,
+	"width":30.0,
 	"fadeTime":0.4,
-	"fringeColor":[57, 255, 255,255],
-	"coreColor":[200, 240, 255,245],
-	"glowColor":[57, 205, 255,50],
-	"glowRadius":70,
+	"fringeColor":[57,255,255,255],
+	"coreColor":[200,240,255,245],
+	"glowColor":[57,205,255,50],
+	"glowRadius":90,
 	"pixelsPerTexel":5.0,
 	"textureType": [
-      "graphics/tahlan/fx/tahlan_cashmere_beam_fringe.png",
-      "graphics/tahlan/fx/tahlan_cashmere_beam_core.png"
+      "graphics/tahlan/fx/tahlan_eradicator_beam_fringe.png",
+      "graphics/tahlan/fx/tahlan_atrapos_beam_core.png"
     ],
 	"textureScrollSpeed":-64,
-	#"bulletSprite":"graphics/missiles/shell_gauss_cannon.png"
 }
